Amlogic-ne: enable Intel XWAY PHY found on RockTek G2 device

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -2161,7 +2161,7 @@ CONFIG_SWPHY=y
 # CONFIG_DP83867_PHY is not set
 CONFIG_FIXED_PHY=y
 # CONFIG_ICPLUS_PHY is not set
-# CONFIG_INTEL_XWAY_PHY is not set
+CONFIG_INTEL_XWAY_PHY=y
 # CONFIG_LSI_ET1011C_PHY is not set
 # CONFIG_LXT_PHY is not set
 # CONFIG_MARVELL_PHY is not set
