Amlogic-ne: dtb.conf: add devices based on sei.smb.280 PCB

--- a/projects/Amlogic-ce/devices/Amlogic-ne/bootloader/dtb.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/bootloader/dtb.conf
@@ -9,6 +9,11 @@
     <file>sc2_s905x4_buzztv_x5_4g.dtb</file>
     <file>sc2_s905x4_buzztv_x5_4g_1gbit.dtb</file>
   </multidtb>
+  <multidtb name="sc2_s905x4_sei_smb_280.dtb" subdevice="">
+    <file>sc2_s905x4_sei_smb_280_id5.dtb</file>
+    <file>sc2_s905x4_sei_smb_280_id6.dtb</file>
+    <file>sc2_s905x4_sei_smb_280_id7.dtb</file>
+  </multidtb>
   <multidtb name="t7_a311d2_beelink_gt_king_ii.dtb" subdevice="">
     <file>t7_a311d2_beelink_gt_king_ii_4g.dtb</file>
     <file>t7_a311d2_beelink_gt_king_ii_8g.dtb</file>
