Amlogic-ne: enable Motorcomm PHY found on Nokia 8010 device

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -2171,6 +2171,7 @@ CONFIG_MESON_GXL_PHY=y
 CONFIG_MICROCHIP_PHY=m
 # CONFIG_MICROCHIP_T1_PHY is not set
 # CONFIG_MICROSEMI_PHY is not set
+CONFIG_MOTORCOMM_PHY=y
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_NXP_TJA11XX_PHY is not set
 # CONFIG_QSEMI_PHY is not set
@@ -6185,8 +6186,8 @@ CONFIG_MTD_RESV_MESON=y
 
 CONFIG_AMLOGIC_LED=y
 CONFIG_AMLOGIC_LEDS_TLC59116=y
-CONFIG_AMLOGIC_LEDS_BCT3236=y
 CONFIG_AMLOGIC_LEDS_STATE=y
+CONFIG_AMLOGIC_LEDS_BCT3236=y
 
 #
 # Audio Interface
