busybox: enable FEATURE_IP_NEIGH
Add support for neighbor commands to "ip".

Using ip neigh:

The ip neigh command provides information very similar to what you get
using arp. (The neigh option to the ip command can be spelled out as
"neighbor" or "neighbour" if you don't mind typing a few more letters.)

One of the reasons for using ip neigh in place of arp is that arp
is among a number of Linux commands that are now deprecated (not
recommended), and the net-tools package from which it derives is no
longer under active development. The newer ip commands should provide
the same basic information, but arp is still a popular tool because
of its many features.

Here is an example of the ip neigh command:

$ ip neigh
192.168.0.33 dev enp0s25 lladdr 7c:67:a2:cf:9f:ef REACHABLE
192.168.0.1 dev enp0s25 lladdr f8:8e:85:35:7f:b9 STALE
192.168.0.7 dev enp0s25 lladdr 20:ea:16:01:55:eb REACHABLE
192.168.0.23 dev enp0s25  FAILED
192.168.0.20 dev enp0s25  FAILED
192.168.0.14 dev enp0s25 lladdr 04:ed:33:7c:44:c6 STALE
192.168.0.8 dev enp0s25  FAILED
192.168.0.17 dev enp0s25 lladdr 00:25:00:4e:9e:35 STALE
192.168.0.15 dev enp0s25 lladdr 38:30:f9:29:f8:a4 STALE
192.168.0.13 dev enp0s25 lladdr 44:65:0d:43:ed:44 STALE
fe80::fa8e:85ff:fe35:7fb9 dev enp0s25 lladdr f8:8e:85:35:7f:b9 router STALE

FAILED indicates that the system could not be reached.
STALE indicates that the connection hasn't been recently verified.

The ip neigh command offers additional options as well. For example,
to add or remove an address from your arp table, you could use commands
like these:

$ sudo ip neigh add 192.168.0.21 dev emp0s25		 add an entry
$ sudo ip neigh del 192.168.0.8 dev enp0s25		 delete an entry

--- a/packages/sysutils/busybox/config/busybox-target.conf
+++ b/packages/sysutils/busybox/config/busybox-target.conf
@@ -936,7 +936,7 @@ CONFIG_FEATURE_IP_ROUTE=y
 CONFIG_FEATURE_IP_ROUTE_DIR="/storage/.config/iproute2"
 CONFIG_FEATURE_IP_TUNNEL=y
 CONFIG_FEATURE_IP_RULE=y
-# CONFIG_FEATURE_IP_NEIGH is not set
+CONFIG_FEATURE_IP_NEIGH=y
 # CONFIG_FEATURE_IP_RARE_PROTOCOLS is not set
 # CONFIG_IPCALC is not set
 # CONFIG_FEATURE_IPCALC_LONG_OPTIONS is not set
