--- a/projects/Amlogic-ce/packages/linux-drivers/amlogic/opentee_linuxdriver/system.d/opentee_linuxdriver.service
+++ b/projects/Amlogic-ce/packages/linux-drivers/amlogic/opentee_linuxdriver/system.d/opentee_linuxdriver.service
@@ -4,8 +4,11 @@ Before=kodi.service
 After=local-fs.target
 
 [Service]
+Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/lib/coreelec/tee-loader start
+ExecStart=/usr/lib/coreelec/dovi-loader start
+ExecStop=/usr/lib/coreelec/dovi-loader stop
 ExecStop=/usr/lib/coreelec/tee-loader stop
 
 [Install]
