busybox: enable CUT for init

--- a/packages/sysutils/busybox/config/busybox-init.conf
+++ b/packages/sysutils/busybox/config/busybox-init.conf
@@ -232,7 +232,7 @@ CONFIG_CHROOT=y
 CONFIG_CP=y
 # CONFIG_FEATURE_CP_LONG_OPTIONS is not set
 # CONFIG_FEATURE_CP_REFLINK is not set
-# CONFIG_CUT is not set
+CONFIG_CUT=y
 # CONFIG_FEATURE_CUT_REGEX is not set
 # CONFIG_DATE is not set
 # CONFIG_FEATURE_DATE_ISOFMT is not set
